# GrannyConverterLibrary

./: .gitignore  CMakeLists.txt  README.md
cmake/: devilsdk.cmake  fbxsdk.cmake
examples/converter/: CMakeLists.txt  main.cpp
src/gcl/: grannyconverterlibrary.cpp  grannyconverterlibrary.h
src/gcl/bindings/: abstractcurvekey.cpp  abstractcurvekey.h  animation.cpp  animation.h  binding.h  bone.cpp  bone.h  bonebinding.cpp  bonebinding.h  curvepositionkey.cpp  curvepositionkey.h  curverotationkey.cpp  curverotationkey.h  curvescalekey.cpp  curvescalekey.h  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  scene.cpp  scene.h  skeleton.cpp  skeleton.h  track.cpp  track.h
src/gcl/exporter/: fbxexporter.cpp  fbxexporter.h  fbxexporteranimation.cpp  fbxexporteranimation.h  fbxexportermaterial.cpp  fbxexportermaterial.h  fbxexportermesh.cpp  fbxexportermesh.h  fbxexportermodule.cpp  fbxexportermodule.h  fbxexportermodulefactory.cpp  fbxexportermodulefactory.h  fbxexporterskeleton.cpp  fbxexporterskeleton.h  fbxexportoptions.h
src/gcl/importer/: deboor.cpp  deboor.h  grannyformat.cpp  grannyformat.h  grannyimporter.cpp  grannyimporter.h  grannyimporteranimation.cpp  grannyimporteranimation.h  grannyimporteranimation_deboor.cpp  grannyimporteranimation_deboor.h  grannyimportermaterial.cpp  grannyimportermaterial.h  grannyimportermodel.cpp  grannyimportermodel.h  grannyimporterskeleton.cpp  grannyimporterskeleton.h  grannyimportoptions.h
src/gcl/utilities/: datetime.cpp  datetime.h  devilimageutility.cpp  devilimageutility.h  fbxsdkcommon.cpp  fbxsdkcommon.h  filestreamutility.cpp  filestreamutility.h  logging.cpp  logging.h  materialutility.cpp  materialutility.h  stringutility.cpp  stringutility.h  textureutility.cpp  textureutility.h
